<resources>
    <string name="app_name">Navegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_calculadora">Calculadora</string>
    <string name="menu_musica">Musicas</string>
    <string name="menu_navegador">Navegador</string>
    <string name="menu_apps">Apps</string>
    <string name="menu_maravillas">Las Maravillas modernas</string>
    <string name="menu_extra">Extra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>